--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -123,28 +123,25 @@
 
 \chapter{Introduction}
 
-Radio position determination of flying objects is standard radio location discipline which led to development of RADAR systems. At the present time the RADAR systems are enought mature to detect almost any radio-reflective flying object in atmosphere or in near space. Therefore technology development is moving from focus on RADAR sensitivity to system efectivity, releability and operation costs. These new technologies leads to new scientific possibilities of observations and measurement which could bring new discoveries. 
+Radio position determination of flying objects is standard radio location discipline which led to development of RADAR systems. At the present time the RADAR systems are enough mature to detect almost any radio-reflective artificial flying object in atmosphere or in near space. Therefore technology development is moving from focus on RADAR sensitivity to system stability, reliability and low operation costs. Resulting applied technologies leads to new scientific possibilities of observations and measurement which could bring new discoveries. 
 
 \section{Problem statement}
 
-\section{Flying object paremeters}
+\section{Flying object parameters}
 
-From radar point of view where terminology usually uses a term target instead of object. The radar cross section and object velocity are limiting parameters of the radar systems. These parameters vary largerly depending on measured flying object type.
+From radar point of view where terminology usually uses a term target instead of object. The radar cross section (RCS) and object velocity are limiting parameters of the radar systems. These parameters vary largely depending on measured flying object type. 
 
 \subsection{Artificial airspace targets}
 
-A large group of possible radio reflective targets are classical airspace objects as airplanes, drones, UAV or satellites. These classical objecs are usually detectable and localizable with already existing radar systems. Therefore this object category could be used for system verification. 
-
-
-
+A large group of possible radio reflective targets are classical airspace objects as airplanes, Unmanned Aerial vehicles or satellites. These classical objects are usually detectable and localizable with already existing radar systems. Parameters like RCS and trajectory or velocity of these object is also known. Therefore this object category could be used for new system verification. 
 
 \subsection{Natural radio-detectable objects}
 
-Several natural atmospheric or near space phenomena are expected to be localised by radio-waves. The list contains Solar system bodies, meteors, ionospheric fluctuations, cosmic rays particles and atmospheric electrical discharges. Not all of these natural phenomenons have confirmed radio detection due to technical or yet uknown physical principles. But observation of natural phenomenons are generally scientifically more valuable than artificial objects. Therefore the work will be mainly focused on methods useful of natural phenomena measurement. 
+Several natural atmospheric or near space phenomena are expected to be localized by radio-waves. The list contains Solar system bodies, meteors, ionospheric fluctuations, cosmic rays particles and atmospheric electrical discharges. Not all of these natural phenomenons have confirmed radio detection due to technical or yet uknown physical principles. But observation of natural phenomenons are generally scientifically more valuable than artificial objects. Therefore the work will be mainly focused on methods useful of natural phenomena measurement. 
 
 \subsection{Position determination methods}
 
-If we want to find out object position by radio signal reflected or transmitted by the object. We have only a small number of signal features which we could use to obtain information about object coordinates. The best method used for determination of object position depends on type of an object required precision of measurement and application. In most cases for uknown flying object we need to cobine several of following methods. 
+If we want to find out object position by radio signal reflected or transmitted by the object. We have only a small number of signal features which we could use to obtain information about object coordinates. The best method used for determination of object position depends on type of an object required precision of measurement and application. In most cases for unknown flying object we need to combine several of following methods. 
 
 \subsection{Triangulation}
 
@@ -186,7 +183,7 @@ For feasibility study of meteor detection based on VOR beacons a numerical signa
 \label{VOR_signal}
 \end{figure}
 
-This signal is expected to be reflected from meteor ionized trail and siglal reflection will be detected and extracted from the noise using the VOR signal replica. An intensity of received reflected signal was modeled by using standard radar equation \ref{Radar_equation}.
+This signal is expected to be reflected from meteor ionized trail and signal reflection will be detected and extracted from the noise using the VOR signal replica. An intensity of received reflected signal was modeled by using standard radar equation \ref{Radar_equation}.
 
 \begin{equation}
 P_r = \frac{P_t G_t G_r \lambda^2 \sigma}{(4 \pi)^3 R_t ^2 R_r ^2 L}
