--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -121,11 +121,9 @@
 
 \maketitle
 
-\chapter{Introduction}
+\chapter{Motivation}
 
 Radio position determination of flying objects is standard radio location discipline which led to development of RADAR systems. At the present time the RADAR systems are enough mature to detect almost any radio-reflective artificial flying object in atmosphere or in near space. Therefore technology development is moving from focus on RADAR sensitivity to system stability, reliability and low operation costs. Resulting applied technologies leads to new scientific possibilities of observations and measurement which could bring new discoveries. 
-
-\section{Problem statement}
 
 \section{Flying object parameters}
 
@@ -168,12 +166,12 @@ Where
 \item $R_{rx}$ - Distance between receiver and target.
 \end{itemize}
 
-\chapter{Current research}
+\chapter{Meteor trajectory determination}
 
-\section{Meteor trajectory determination}
+\section{GRAVES based detection system}
 
 
-\subsection{VOR Transmitters as signal sources}
+\section{VOR Transmitters as signal sources}
 
 For feasibility study of meteor detection based on VOR beacons a numerical signal model has been created. The spectrum of modeled signal is shown in figure \ref{VOR_signal}.
 
