thesis proposal improved.

--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -81,35 +81,6 @@
 
 \setlength{\parskip}{5ex plus 0.2ex minus 0.2ex}
 
-% Abstract in Czech
-%\begin{abstract-czech}
-%Tys honí až nevrlí komise omylem kontor město sbírku a koutě, pán nu lež, slzy, nemají zasvé šťasten. Tetě veselá. Vem lépe ty jí cíp vrhá. Novinám prachy kabát. Býti čaj via pakujte přeli, dyť do chuť kroutí kolínský bába odkrouhnul. Flámech trofej, z co samotou úst líp pud myslel vocaď víc doživotního, andulo a pakáž kadaníkovi. Čímž protiva v žába vězí duní.
-
-%Jé ní ticho vzoru. Lepší zburcují učil nepořádku zboží ní mučedník obdivem! Bas nemožné postele bys cítíte ať února. Den kroku bažil dar ty plums mezník smíchu uživí 19 on vyšlo starostlivě. Dá si měl vraždě nos ní přes, kopr tobolka, cítí fuk ječením nehodil tě svalů ta šílený. Uf teď jaké 19 divným.
-%\end{abstract-czech}
-
-% Abstract in English
-%\begin{abstract-english}
-% Let us suppose we are given a modulus $d$.  In \cite{cite:10}, the main result was the extension of Newton random variables.  We show that ${\Gamma_{\mathfrak{{r}},b}} ( {Z_{\beta,f}} ) \sim \bar{E}$.  The work in \cite{cite:20} did not consider the infinite, hyper-reversible, local case. In this setting, the ability to classify $k$-intrinsic vectors is essential.
- 
-%Let us suppose $\mathfrak{{a}} > \mathfrak{{c}}''$.  Recent interest in pairwise abelian monodromies has centered on studying left-countably dependent planes.  We show that $\Delta \ge 0$.  It was Brouwer who first asked whether classes can be described. B. Artin \cite{cite:30} improved upon the results of M. Bernoulli by deriving nonnegative classes.
-
-%x\par x\par x\par x\par x\par x\par x\par x\par x\par x\par x\par x\par x
-
-
-%\end{abstract-english}
-
-% Acknowledgements / Podekovani
-%\begin{thanks}
-%Děkuji ČVUT, že mi je tak dobrou \emph{alma mater}.
-%\end{thanks}
-
-% Declaration / Prohlaseni
-%\begin{declaration}
-%Prohlašuji, že jsem předloženou práci vypracoval samostatně, a že jsem uvedl veškerou použitou literaturu.
-
-%V Praze, \ctufield{day}.~\monthinlanguage{title}~\ctufield{year}
-%\end{declaration}
 
 % Only for testing purposes
 \listfiles
@@ -135,7 +106,7 @@ A large group of possible radio reflective targets are classical airspace object
 
 \subsection{Natural radio-detectable objects}
 
-Several natural atmospheric or near space phenomena are expected to be localized by radio-waves. The list contains Solar system bodies, meteors, ionospheric fluctuations, cosmic rays particles and atmospheric electrical discharges. Not all of these natural phenomenons have confirmed radio detection due to technical or yet unknown physical principles. But observation of natural phenomenons are generally scientifically more valuable than artificial objects. Therefore the work will be mainly focused on methods useful of natural phenomena measurement. 
+Several natural atmospheric or near space phenomena are expected to be localized by radio-waves. The list contains Solar system bodies, meteors, ionospheric fluctuations, cosmic rays particles and atmospheric electrical discharges. Not all of these natural phenomenons have confirmed radio detection due to technical or yet unknown physical principles. But observation of natural phenomenons are generally scientifically more valuable than artificial objects. Therefore the work will be mainly focused on methods useful of natural phenomena measurement and detection. 
 
 Meteors were selected as primary testing phenomenon because they have unusual special properties like high velocities and wide range of RCS. Meteors, the products of meteoroids travelling in space, are studied for many decades. Results of such research help us to understand the evolution of not only the planetary system but the interplanetary medium \cite{interplanetary_medium} as well. As the density of the interplanetary medium is low, large statistical and long term continuous data set is necessary to describe its properties. There exist two radio waves observation methods which use the scattering ability of the ionized meteor trail.
 
