--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -98,15 +98,15 @@ Radio position determination of flying objects is standard radio location discip
 
 \section{Flying object parameters}
 
-From radar point of view where terminology usually uses a term target instead of object. The radar cross section (RCS) and object velocity are limiting parameters of the radar systems. These parameters vary largely depending on measured flying object type. 
+From radar point of view where terminology usually uses a term target instead of object. The radar cross section (RCS) and object velocity are typical limiting parameters of the radar systems. These parameters vary largely depending on measured flying object type. 
 
 \subsection{Artificial airspace targets}
 
-A large group of possible radio reflective targets are classical airspace objects as airplanes, Unmanned Aerial vehicles or satellites. These classical objects are usually detectable and localizable with already existing radar systems. Parameters like RCS and trajectory or velocity of these object is also known. Therefore this object category could be used for new system verification. 
+A large group of possible radio reflective targets are classical airspace objects as airplanes, Unmanned Aerial vehicles or satellites. These classical objects are detectable and localizable with already existing radar systems. Parameters like RCS and trajectory or velocity of these object is usually known and are not attracting much interest of radio scientist except of utilize this object category for new system parameters verification. 
 
 \subsection{Natural radio-detectable objects}
 
-Several natural atmospheric or near space phenomena are expected to be localized by radio-waves. The list contains Solar system bodies, meteors, ionospheric fluctuations, cosmic rays particles and atmospheric electrical discharges. Not all of these natural phenomenons have confirmed radio detection due to technical or yet unknown physical principles. But observation of natural phenomenons are generally scientifically more valuable than artificial objects. Therefore the work will be mainly focused on methods useful of natural phenomena measurement and detection. 
+Several natural atmospheric or near space phenomena are expected to be localized by radio-waves. The list contains Solar system bodies, meteors, ionospheric fluctuations, cosmic rays particles and atmospheric electrical discharges. Not all of these natural phenomenons have confirmed radio detection due to technical or yet unknown physical principles \cite{LOPES}.  But observation of natural phenomenons are generally scientifically more valuable than artificial objects \cite{astro_particles}. Therefore the work will be mainly focused on methods useful of natural phenomena measurement and detection. 
 
 Meteors were selected as primary testing phenomenon because they have unusual special properties like high velocities and wide range of RCS. Meteors, the products of meteoroids travelling in space, are studied for many decades. Results of such research help us to understand the evolution of not only the planetary system but the interplanetary medium \cite{interplanetary_medium} as well. As the density of the interplanetary medium is low, large statistical and long term continuous data set is necessary to describe its properties. There exist two radio waves observation methods which use the scattering ability of the ionized meteor trail.
 
@@ -307,11 +307,21 @@ Unfortunately the resulting antenna resonance was at 161.5 MHz as is shown in fi
 \bibliography{refs}
 \bibliographystyle{plain}
 
+\bibitem{LOPES}
+F. G. Schröder, Instruments and Methods for the Radio Detection of High Energy Cosmic Rays,
+\emph{DISSERTATION}, Tag der mündlichen Prüfung: 11. Februar 2011
+
 \bibitem{interplanetary_medium}
 MANN, I., PELLINEN-WANNBERG, A., MURAD, E., et. al.
 Dusty plasma effects in near earth space and interplanetary medium.
 \emph{Space Science Reviews}, 2011, Vol. 161, Issue 1-4: 1-47 
 10.1007/s11214-011-9762-3 
+
+\bibitem{astro_particles}
+J. Stasielak, R. Engel, S. Baur, P. Neunteufel, R. Šmída, F. Werner, H. Wilczyński
+Feasibility of radar detection of extensive air showers
+\emph{Astroparticle Physics}, Volume 73, 15 January 2016, Pages 14–27, astropartphys.2015.07.003 
+
 
 \bibitem{Bland01102004}
 BLAND, PHILIP, A.,
