Thanks and declaration pages removed.

--- a/ctuth-templates.tex
+++ b/ctuth-templates.tex
@@ -167,10 +167,10 @@
 % the abstracts are accompanied by the keywords and possibly other information
 \ctutemplateset{maketitle.twocolumn.default}{
 	\begin{twocolumnfrontmatterpage}
-		\ctutemplate{twocolumn.thanks}
-	\newpage
-		\ctutemplate{twocolumn.declaration}
-	\clearpage
+%		\ctutemplate{twocolumn.thanks}
+%	\newpage
+%		\ctutemplate{twocolumn.declaration}
+%	\clearpage
 		\ctutemplate{twocolumn.abstract.in.titlelanguage}
 	\newpage
 		\ctutemplate{twocolumn.abstract.in.secondlanguage}
