--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -24,7 +24,7 @@
 	department-english = {Department of Measurement},
 	author = {Jakub Kákona},
 	supervisor = {Doc. Dr. Ing. Pavel Kovář},
-	supervisor-address = {Department of Radio Engineering, \\ Uliční 5, \\ Praha 99},
+	supervisor-address = {Department of Radio Engineering},
 %	supervisor-specialist = {John Doe},
 	fieldofstudy-english = {Air Traffic Control},
 	subfieldofstudy-english = {Radio navigation},
@@ -37,8 +37,8 @@
 	year = 2016,
 %	specification-file = {ctutest-zadani.pdf},
 %	front-specification = true,
-%	front-list-of-figures = false,
-%	front-list-of-tables = false,
+	front-list-of-figures = false,
+	front-list-of-tables = false,
 %	monochrome = true,
 %	layout-short = true,
 %	savetoner = true,
@@ -51,16 +51,16 @@
 	\def\subfieldofstudyname{Studijní program}%
 }
 
-\ctutemplateset{maketitle twocolumn default}{
-	\begin{twocolumnfrontmatterpage}
+%\ctutemplateset{maketitle twocolumn default}{
+%	\begin{twocolumnfrontmatterpage}
 %		\ctutemplate{twocolumn.thanks}
 %		\ctutemplate{twocolumn.declaration}
-		\ctutemplate{twocolumn.abstract.in.titlelanguage}
-		\ctutemplate{twocolumn.abstract.in.secondlanguage}
-		\ctutemplate{twocolumn.tableofcontents}
-		\ctutemplate{twocolumn.listoffigures}
-	\end{twocolumnfrontmatterpage}
-}
+%		\ctutemplate{twocolumn.abstract.in.titlelanguage}
+%		\ctutemplate{twocolumn.abstract.in.secondlanguage}
+%		\ctutemplate{twocolumn.tableofcontents}
+%		\ctutemplate{twocolumn.listoffigures}
+%	\end{twocolumnfrontmatterpage}
+%}
 
 % Theorem declarations, this is the reasonable default, anybody can do what they wish.
 % If you prefer theorems in italics rather than slanted, use \theoremstyle{plainit}
